[package]
name = "rbatis-test"
version = "0.1.0"
edition = "2021"

# 添加 二进制 create 
[[bin]]
name = "raw_sql"
path = "src/raw_sql.rs"


[[bin]]
name = "curd"
path = "src/curd.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }

# log日志(必须)
log = "0.4"
fast_log = "1.5"

# json(必须)
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

rbs = { version = "0.1"}
rbatis = { version = "4.0"}
rbdc-mysql = {version="0.1"}

# 日期
chrono = { version = "0.4", features = ["serde"] }