[package]
name = "reqwest_front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.20.1", features = ["full"]}
warp = "0.3.2"
serde_json = "1.0.82"
serde = {version = "1.0.140", features = ["derive"]}
reqwest = {version = "0.11.11", features = ["json"]}